[gd_scene load_steps=4 format=3 uid="uid://bsim5861oe73u"]

[ext_resource type="Script" path="res://house_yaga_space/content/ui/main_menu.gd" id="1_23a5j"]
[ext_resource type="Theme" uid="uid://bci8t28orq14i" path="res://house_yaga_space/resource/ui/theme_ui_main_menu.tres" id="2_8j44i"]
[ext_resource type="AudioStream" uid="uid://4ptrf1tm6eb1" path="res://house_yaga_space/resource/audio/SFX/shot2.wav" id="3_oxudu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_8j44i")
script = ExtResource("1_23a5j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.188235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -438.0
offset_right = 514.0
offset_bottom = -88.0
grow_vertical = 0
theme = ExtResource("2_8j44i")
theme_override_constants/separation = 25

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8j44i")
theme_override_font_sizes/font_size = 0

[node name="Label" type="Label" parent="VBoxContainer/ButtonStart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Полетели!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonOptions" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3/ButtonOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Опции"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonExit" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/ButtonExit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Выход"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonStory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -299.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Label" type="Label" parent="ButtonStory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -34.5
offset_right = 107.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "История"

[node name="AudioStreamPlayerClick" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_oxudu")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="ButtonStory" to="." method="_on_button_story_pressed"]
